def/force-app/main/default/objects/StudentMaster__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Masters</relationshipLabel>
    <relationshipName>Student_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>