def/force-app/main/default/objects/StudentMaster__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>Mech</fullName>
            </value>
            <value>
                <fullName>Phd1</fullName>
            </value>
            <value>
                <fullName>Phd2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>