def/force-app/main/default/objects/StudentMaster__c/fields/EmailId__c.field-meta.xml
<CustomField>
    <fullName>EmailId__c</fullName>
    <label>EmailId</label>
    <type>Email</type>
</CustomField>