def/force-app/main/default/objects/StudentMaster__c/fields/Graduategrades__c.field-meta.xml
<CustomField>
    <fullName>Graduategrades__c</fullName>
    <label>Graduategrades</label>
    <length>3</length>
    <type>Text</type>
</CustomField>