def/force-app/main/default/objects/StudentMaster__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>States</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Siberia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>