def/force-app/main/default/objects/StudentMaster__c/fields/Studentphone__c.field-meta.xml
<CustomField>
    <fullName>Studentphone__c</fullName>
    <label>Studentphone</label>
    <type>Phone</type>
</CustomField>