def/force-app/main/default/objects/StudentMaster__c/fields/Total_marks__c.field-meta.xml
<CustomField>
    <fullName>Total_marks__c</fullName>
    <label>Total marks</label>
    <summarizedField>StudentMarks__c.MArks__c</summarizedField>
    <summaryForeignKey>StudentMarks__c.StudentMaster__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>