def/force-app/main/default/objects/StudentMaster__c/recordTypes/Postgradlevel1.recordType-meta.xml
<RecordType>
    <fullName>Postgradlevel1</fullName>
    <active>true</active>
    <label>Postgradlevel</label>
</RecordType>