def/force-app/main/default/objects/StudentMaster__c/validationRules/Agecheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Agecheck</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Age__c  &lt;18, true,false)</errorConditionFormula>
    <errorMessage>Age cannot be less than 18</errorMessage>
</ValidationRule>