def/force-app/main/default/objects/StudentMaster__c/validationRules/DOJ_check.validationRule-meta.xml
<ValidationRule>
    <fullName>DOJ_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(DOJ__c &lt;TODAY(), ISNEW())</errorConditionFormula>
    <errorMessage>DOJ cannot be less than today</errorMessage>
</ValidationRule>