def/force-app/main/default/objects/StudentMaster__c/validationRules/Name_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISCHANGED( Name ), true,false)</errorConditionFormula>
    <errorMessage>Name cannot be changed</errorMessage>
</ValidationRule>