def/force-app/main/default/objects/StudentMaster__c/listViews/Mynewviewone.listView-meta.xml
<ListView>
    <fullName>Mynewviewone</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Contact__c</columns>
    <columns>Country__c</columns>
    <columns>Department__c</columns>
    <columns>Comments__c</columns>
    <columns>DOJ__c</columns>
    <columns>EmailId__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mynewviewone</label>
    <language>en_US</language>
</ListView>