def/force-app/main/default/objects/StudentMaster__c/listViews/tesvw.listView-meta.xml
<ListView>
    <fullName>tesvw</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>tesvw</label>
    <language>en_US</language>
</ListView>